fix: fixed flex-wrap bug

--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ section {
 .links {
 display: flex;
 justify-content: space-between;
+flex-wrap: wrap;
 }
 
 .block > * {
